# brogue

./: Cargo.toml
assets/: aquatar.stl
assets/scad/: aquatar.scad
src/: game.rs  main.rs
src/game/: components.rs  constants.rs  grid.rs  mod.rs  plugin.rs  resources.rs  rogue.rs  room.rs
src/game/components/: mod.rs
src/game/systems/: hit.rs  mod.rs  setup.rs  stairs.rs  startup.rs  walk.rs
src/game/values/: grid.rs  mod.rs  pack_item.rs
