[package]
name = "brogue"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_prng = { version = "0.10.0", features = ["wyrand"] }
bevy_rand = "0.10.0"
bevy_stl = "0.16.0"
rand = "0.9.1"
